# ChangeLog for sci-biology/bx-python
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*bx-python-0.7.2 (12 Apr 2015)
*bx-python-9999 (12 Apr 2015)

  12 Apr 2015; Michael Schubert <mschu.dev@gmail.com> +bx-python-0.7.2.ebuild,
  +bx-python-9999.ebuild, +metadata.xml:
  sci-biology/bx-python: add bx-python