@@ -8,14 +8,15 @@ PYTHON_COMPAT=( python2_7 )
 
 inherit distutils-r1
 
-DESCRIPTION="Library for rapid implementation of genome scale analyses. "
+DESCRIPTION="Library for rapid implementation of genome scale analyses"
 HOMEPAGE="https://bitbucket.org/james_taylor/bx-python/wiki/Home"
-SRC_URI="mirror://pypi/b/bx-python/bx-python-${PV}.tar.gz"
+SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
-DEPEND="dev-python/cython[${PYTHON_USEDEP}]
-	    dev-python/numpy[${PYTHON_USEDEP}]"
 RDEPEND="dev-python/numpy[${PYTHON_USEDEP}]"
+DEPEND="${RDEPEND}
+	dev-python/cython[${PYTHON_USEDEP}]"
