@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Apr 2015; Justin Lecher <jlec@gentoo.org> bx-python-0.7.2.ebuild,
+  bx-python-9999.ebuild:
+  sci-biology/bx-python: Streamline ebuild
+
 *bx-python-0.7.2 (12 Apr 2015)
 *bx-python-9999 (12 Apr 2015)
 
